--- a/src/app/features/setups/components/forms/components/lms-individual/lms-individual.component.css
+++ b/src/app/features/setups/components/forms/components/lms-individual/lms-individual.component.css
@@ -24,8 +24,43 @@ table {
     padding: 8px;
     text-align: left;
   }
-  
-  th {
-    background-color: #f2f2f2;
+  thead {
+    border-radius: 0.3rem;
   }
   
+
+  th {
+    background-color: var(--primary-color);
+    color: white;
+    font-weight: 400;
+  }
+  tr, td {
+    border: 0;
+  }
+
+  tr:hover{
+    color: black;
+    background-color: rgba(0, 0, 0, 0.092);
+    cursor: pointer;
+  }
+
+  .modal-title{
+    font-size: 13px;
+  }
+  
+  .modal-header {
+    border-bottom: 0 !important;
+  }
+  .btn-close {
+    font-size: 10px;
+  }
+
+  .sm {
+    font-size: 12px;
+    padding: 0 0.2rem;
+  }
+  .link {
+    cursor: pointer;
+    color: var(--primary-color);
+    font-weight: 600;
+  }
