--- a/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
@@ -81,6 +81,8 @@
           [value]="transactions"
           [resizableColumns]="true"
           [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+          [scrollable]="true"
+          scrollHeight="400px"
           styleClass="p-datatable-sm"
           responsiveLayout="scroll" class='ui-datatable'
           currentPageReportTemplate="{first} - {last} of {totalRecords}">
