--- a/src/app/features/entities/components/entity/new-entity/new-entity.component.html
+++ b/src/app/features/entities/components/entity/new-entity/new-entity.component.html
@@ -90,6 +90,7 @@
                                     class="form-text text-danger"
                                     [ngClass]="{ 'is-invalid': ['submitted'] && f['identity_number']?.errors }">
                                     <div *ngIf="f['identity_number']?.errors['required']">Identity number is required</div>
+                                    <div *ngIf="f['identity_number'].errors['pattern']">ID Number format 12345678</div>
                                 </div>
                             </div>
                         </ng-container>
@@ -103,6 +104,7 @@
                                     class="form-text text-danger"
                                     [ngClass]="{ 'is-invalid': ['submitted'] && f['pin_number']?.errors }">
                                     <div *ngIf="f['pin_number']?.errors['required']">PIN Number is required</div>
+                                    <div *ngIf="f['pin_number'].errors['pattern']">PIN Number format A123456789R</div>
                                 </div>
                             </div>
                         </ng-container>
