VQ-1154: Responsiveness of analytics module

--- a/src/app/features/base/components/header/header.component.css
+++ b/src/app/features/base/components/header/header.component.css
@@ -138,7 +138,7 @@
 
 /* responsive */
 @media (max-width: 576px) {
-  .dropdown-item {
+  /* .dropdown-item {
     font-size: 0.8em;
-  }
+  } */
 }
