--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -105,6 +105,8 @@
     
 </div>
 
+<div class="mobile-bottom"></div>
+
 
 <!-- Save Report Modal -->
 <div class="modal fade" id="saveReportModal" tabindex="-1" aria-labelledby="saveReportModal" aria-hidden="true">
