--- a/src/app/features/reports-v2/criteria/criteria.component.html
+++ b/src/app/features/reports-v2/criteria/criteria.component.html
@@ -2,10 +2,10 @@
   <div *ngFor="let criterion of criteria" class="col-md-4">
     <div class="row pill-box fadeIn">
 
-      <div class="col-md-9 text-primary">
+      <div class="col-md-9 col-9 text-primary">
         {{ criterion.queryName }}
       </div>
-      <div class="col-md-3 text-end">
+      <div class="col-md-3 col-3 text-end">
         <div class="btn-group me-2">
           <span id="selectCriteriaBtn" (click)="selectCriteria(criterion)" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="pi pi-sort-amount-down text-secondary"></i>
