--- a/src/app/features/reports-v2/report-preview/report-preview.component.html
+++ b/src/app/features/reports-v2/report-preview/report-preview.component.html
@@ -256,7 +256,7 @@
           </div>
           <div class="row mt-3">
             <p class="form-label">Pick a destination for your report</p>
-            <div class="col-md-4">
+            <div class="col-md-4 col-5">
               <input
                 formControlName="destination"
                 class="form-check-input me-2"
@@ -268,7 +268,7 @@
                 My reports
               </label>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-5">
               <input
                 formControlName="destination"
                 class="form-check-input me-2"
