--- a/src/app/features/reports-v2/save-report-modal/save-report-modal.component.html
+++ b/src/app/features/reports-v2/save-report-modal/save-report-modal.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row mt-3">
       <p class="form-label">Pick a destination for your report</p>
-      <div class="col-md-4">
+      <div class="col-md-4 col-5">
         <input
           formControlName="destination"
           class="form-check-input me-2"
@@ -28,7 +28,7 @@
           My reports
         </label>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-5">
         <input
           formControlName="destination"
           class="form-check-input me-2"
