--- a/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
@@ -23,7 +23,8 @@
       </div>
       <div class="col-lg-3 col-sm-6 mx-2">
         <label >Employees</label><br>
-        <input type="text" class="form-control" [value]="aggregatedEmployeeData.numberOfElements" disabled>
+        <input type="text" class="form-control"
+               [value]="aggregatedEmployeeData.numberOfElements === undefined ? 0 : aggregatedEmployeeData.numberOfElements" disabled>
       </div>
     </form>
 
